// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AppStack - Dev matches snapshot 1`] = `
{
  "Outputs": {
    "ApiUrl": {
      "Description": "Base URL for the Notes API",
      "Export": {
        "Name": "NotesApiUrl",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "NotesApi2FFCBC92",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
            },
            "/",
          ],
        ],
      },
    },
    "CognitoDomain": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "NotesUserPoolNotesUserPoolDomain7B9BE38F",
            },
            ".auth.",
            {
              "Ref": "AWS::Region",
            },
            ".amazoncognito.com",
          ],
        ],
      },
    },
    "NotesApiEndpoint602C11C3": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "NotesApi2FFCBC92",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
            },
            "/",
          ],
        ],
      },
    },
    "TableName": {
      "Description": "Name of the DynamoDB table",
      "Export": {
        "Name": "NotesTableName",
      },
      "Value": {
        "Ref": "NotesTableD0D0D2F1",
      },
    },
    "UserPoolClientId": {
      "Value": {
        "Ref": "NotesUserPoolClient5D6339A3",
      },
    },
    "UserPoolId": {
      "Value": {
        "Ref": "NotesUserPoolC2397827",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CreateNoteFunctionC1EC69E3": {
      "DependsOn": [
        "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA",
        "CreateNoteFunctionServiceRole9C3BB915",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "07792e1a9f99895805c3695e1bcb779d3f86d9dd01f4028e1c0897277aba5550.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_ORIGIN": "*",
            "REGION": "us-east-1",
            "TABLE_NAME": {
              "Ref": "NotesTableD0D0D2F1",
            },
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "CreateNoteFunctionServiceRole9C3BB915",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "CreateNoteFunctionServiceRole9C3BB915": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "NotesTableD0D0D2F1",
                    "Arn",
                  ],
                },
                {
                  "Ref": "AWS::NoValue",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA",
        "Roles": [
          {
            "Ref": "CreateNoteFunctionServiceRole9C3BB915",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DeleteNoteFunctionCB51FD8A": {
      "DependsOn": [
        "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB",
        "DeleteNoteFunctionServiceRoleF6C5C9BE",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "effe4e6b7fe2c0efce36d54c1c03f2967c81786658839b0b56b4dcdf46f34013.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_ORIGIN": "*",
            "REGION": "us-east-1",
            "TABLE_NAME": {
              "Ref": "NotesTableD0D0D2F1",
            },
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "DeleteNoteFunctionServiceRoleF6C5C9BE",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "NotesTableD0D0D2F1",
                    "Arn",
                  ],
                },
                {
                  "Ref": "AWS::NoValue",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB",
        "Roles": [
          {
            "Ref": "DeleteNoteFunctionServiceRoleF6C5C9BE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DeleteNoteFunctionServiceRoleF6C5C9BE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "GetAllNotesFunction67B1BBB1": {
      "DependsOn": [
        "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2",
        "GetAllNotesFunctionServiceRole77987CC1",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "b49afebf9b3b9c67b00b9777c474648e317831435ef030c6ae34cea9cde1528e.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_ORIGIN": "*",
            "REGION": "us-east-1",
            "TABLE_NAME": {
              "Ref": "NotesTableD0D0D2F1",
            },
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "GetAllNotesFunctionServiceRole77987CC1",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "GetAllNotesFunctionServiceRole77987CC1": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "NotesTableD0D0D2F1",
                    "Arn",
                  ],
                },
                {
                  "Ref": "AWS::NoValue",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2",
        "Roles": [
          {
            "Ref": "GetAllNotesFunctionServiceRole77987CC1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GetNoteByIdFunction0CA9D5E9": {
      "DependsOn": [
        "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48",
        "GetNoteByIdFunctionServiceRole94798426",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "63f5bf2fa8dd0ba048f487128630f68000d42cb06f8c48b97bd773b98cf1097b.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_ORIGIN": "*",
            "REGION": "us-east-1",
            "TABLE_NAME": {
              "Ref": "NotesTableD0D0D2F1",
            },
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "GetNoteByIdFunctionServiceRole94798426",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "GetNoteByIdFunctionServiceRole94798426": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "NotesTableD0D0D2F1",
                    "Arn",
                  ],
                },
                {
                  "Ref": "AWS::NoValue",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48",
        "Roles": [
          {
            "Ref": "GetNoteByIdFunctionServiceRole94798426",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "NotesApi2FFCBC92": {
      "Properties": {
        "Name": "Notes Service",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "NotesApiAccount868808F8": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "NotesApi2FFCBC92",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "NotesApiCloudWatchRoleB85AD1BE",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "NotesApiCloudWatchRoleB85AD1BE": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "NotesApiDeploymentE5BDBE475a8597d952d7f9041a70deb596f4630b": {
      "DependsOn": [
        "NotesApinotesidDELETE24275C9B",
        "NotesApinotesidGET8453D020",
        "NotesApinotesidOPTIONS52F3D75D",
        "NotesApinotesidPUT13E9226C",
        "NotesApinotesidFFCD9C7D",
        "NotesApinotesGET86839B50",
        "NotesApinotesOPTIONS58AEEB93",
        "NotesApinotesPOST6F739821",
        "NotesApinotes5F6484F8",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "NotesApiDeploymentStageprod3F5FAD3A": {
      "DependsOn": [
        "NotesApiAccount868808F8",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "NotesApiDeploymentE5BDBE475a8597d952d7f9041a70deb596f4630b",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "NotesApinotes5F6484F8": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "NotesApi2FFCBC92",
            "RootResourceId",
          ],
        },
        "PathPart": "notes",
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "NotesApinotesGET86839B50": {
      "DependsOn": [
        "GetAllNotesFunction67B1BBB1",
        "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2",
        "GetAllNotesFunctionServiceRole77987CC1",
      ],
      "Properties": {
        "AuthorizationType": "COGNITO_USER_POOLS",
        "AuthorizerId": {
          "Ref": "NotesAuthorizerE65DF30F",
        },
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "GetAllNotesFunction67B1BBB1",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "NotesApinotes5F6484F8",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesGETApiPermissionTestStackNotesApiBE93DD0CGETnotes64BA24B2": {
      "DependsOn": [
        "GetAllNotesFunction67B1BBB1",
        "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2",
        "GetAllNotesFunctionServiceRole77987CC1",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "GetAllNotesFunction67B1BBB1",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/",
              {
                "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
              },
              "/GET/notes",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesGETApiPermissionTestTestStackNotesApiBE93DD0CGETnotes121A7009": {
      "DependsOn": [
        "GetAllNotesFunction67B1BBB1",
        "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2",
        "GetAllNotesFunctionServiceRole77987CC1",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "GetAllNotesFunction67B1BBB1",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/test-invoke-stage/GET/notes",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesOPTIONS58AEEB93": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Credentials": "'true'",
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,Authorization
                "method.response.header.Access-Control-Allow-Methods": "'GET,POST,PUT,DELETE'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Credentials": true,
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Ref": "NotesApinotes5F6484F8",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesPOST6F739821": {
      "DependsOn": [
        "CreateNoteFunctionC1EC69E3",
        "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA",
        "CreateNoteFunctionServiceRole9C3BB915",
      ],
      "Properties": {
        "AuthorizationType": "COGNITO_USER_POOLS",
        "AuthorizerId": {
          "Ref": "NotesAuthorizerE65DF30F",
        },
        "HttpMethod": "POST",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "CreateNoteFunctionC1EC69E3",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "NotesApinotes5F6484F8",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesPOSTApiPermissionTestStackNotesApiBE93DD0CPOSTnotes6980F55A": {
      "DependsOn": [
        "CreateNoteFunctionC1EC69E3",
        "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA",
        "CreateNoteFunctionServiceRole9C3BB915",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CreateNoteFunctionC1EC69E3",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/",
              {
                "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
              },
              "/POST/notes",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesPOSTApiPermissionTestTestStackNotesApiBE93DD0CPOSTnotesB1E13CB5": {
      "DependsOn": [
        "CreateNoteFunctionC1EC69E3",
        "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA",
        "CreateNoteFunctionServiceRole9C3BB915",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CreateNoteFunctionC1EC69E3",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/test-invoke-stage/POST/notes",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidDELETE24275C9B": {
      "DependsOn": [
        "DeleteNoteFunctionCB51FD8A",
        "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB",
        "DeleteNoteFunctionServiceRoleF6C5C9BE",
      ],
      "Properties": {
        "AuthorizationType": "COGNITO_USER_POOLS",
        "AuthorizerId": {
          "Ref": "NotesAuthorizerE65DF30F",
        },
        "HttpMethod": "DELETE",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "DeleteNoteFunctionCB51FD8A",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "NotesApinotesidFFCD9C7D",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesidDELETEApiPermissionTestStackNotesApiBE93DD0CDELETEnotesid313F297F": {
      "DependsOn": [
        "DeleteNoteFunctionCB51FD8A",
        "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB",
        "DeleteNoteFunctionServiceRoleF6C5C9BE",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeleteNoteFunctionCB51FD8A",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/",
              {
                "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
              },
              "/DELETE/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidDELETEApiPermissionTestTestStackNotesApiBE93DD0CDELETEnotesid28B5BD62": {
      "DependsOn": [
        "DeleteNoteFunctionCB51FD8A",
        "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB",
        "DeleteNoteFunctionServiceRoleF6C5C9BE",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeleteNoteFunctionCB51FD8A",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/test-invoke-stage/DELETE/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidFFCD9C7D": {
      "Properties": {
        "ParentId": {
          "Ref": "NotesApinotes5F6484F8",
        },
        "PathPart": "{id}",
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "NotesApinotesidGET8453D020": {
      "DependsOn": [
        "GetNoteByIdFunction0CA9D5E9",
        "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48",
        "GetNoteByIdFunctionServiceRole94798426",
      ],
      "Properties": {
        "AuthorizationType": "COGNITO_USER_POOLS",
        "AuthorizerId": {
          "Ref": "NotesAuthorizerE65DF30F",
        },
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "GetNoteByIdFunction0CA9D5E9",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "NotesApinotesidFFCD9C7D",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesidGETApiPermissionTestStackNotesApiBE93DD0CGETnotesidF951334D": {
      "DependsOn": [
        "GetNoteByIdFunction0CA9D5E9",
        "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48",
        "GetNoteByIdFunctionServiceRole94798426",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "GetNoteByIdFunction0CA9D5E9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/",
              {
                "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
              },
              "/GET/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidGETApiPermissionTestTestStackNotesApiBE93DD0CGETnotesid8CC471A7": {
      "DependsOn": [
        "GetNoteByIdFunction0CA9D5E9",
        "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48",
        "GetNoteByIdFunctionServiceRole94798426",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "GetNoteByIdFunction0CA9D5E9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/test-invoke-stage/GET/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidOPTIONS52F3D75D": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Credentials": "'true'",
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,Authorization'",
                "method.response.header.Access-Control-Allow-Methods": "'GET,PUT,DELETE'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Credentials": true,
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Ref": "NotesApinotesidFFCD9C7D",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesidPUT13E9226C": {
      "DependsOn": [
        "UpdateNoteFunctionF36A8BA2",
        "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764",
        "UpdateNoteFunctionServiceRole2D7A5094",
      ],
      "Properties": {
        "AuthorizationType": "COGNITO_USER_POOLS",
        "AuthorizerId": {
          "Ref": "NotesAuthorizerE65DF30F",
        },
        "HttpMethod": "PUT",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "UpdateNoteFunctionF36A8BA2",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "NotesApinotesidFFCD9C7D",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesidPUTApiPermissionTestStackNotesApiBE93DD0CPUTnotesid13F76661": {
      "DependsOn": [
        "UpdateNoteFunctionF36A8BA2",
        "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764",
        "UpdateNoteFunctionServiceRole2D7A5094",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "UpdateNoteFunctionF36A8BA2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/",
              {
                "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
              },
              "/PUT/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidPUTApiPermissionTestTestStackNotesApiBE93DD0CPUTnotesidDFE7C38C": {
      "DependsOn": [
        "UpdateNoteFunctionF36A8BA2",
        "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764",
        "UpdateNoteFunctionServiceRole2D7A5094",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "UpdateNoteFunctionF36A8BA2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/test-invoke-stage/PUT/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesAuthorizerE65DF30F": {
      "Properties": {
        "IdentitySource": "method.request.header.Authorization",
        "Name": "TestStackNotesAuthorizerC4125F9D",
        "ProviderARNs": [
          {
            "Fn::GetAtt": [
              "NotesUserPoolC2397827",
              "Arn",
            ],
          },
        ],
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
        "Type": "COGNITO_USER_POOLS",
      },
      "Type": "AWS::ApiGateway::Authorizer",
    },
    "NotesTableD0D0D2F1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "id",
            "AttributeType": "S",
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "id",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
        "TableName": "NotesTable",
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
    "NotesUserPoolC2397827": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AccountRecoverySetting": {
          "RecoveryMechanisms": [
            {
              "Name": "verified_phone_number",
              "Priority": 1,
            },
            {
              "Name": "verified_email",
              "Priority": 2,
            },
          ],
        },
        "AdminCreateUserConfig": {
          "AllowAdminCreateUserOnly": false,
        },
        "AutoVerifiedAttributes": [
          "email",
        ],
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UsernameAttributes": [
          "email",
        ],
        "VerificationMessageTemplate": {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Delete",
    },
    "NotesUserPoolClient5D6339A3": {
      "Properties": {
        "AllowedOAuthFlows": [
          "implicit",
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": [
          "profile",
          "phone",
          "email",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": [
          "https://example.com",
        ],
        "ExplicitAuthFlows": [
          "ALLOW_USER_PASSWORD_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "GenerateSecret": false,
        "PreventUserExistenceErrors": "ENABLED",
        "SupportedIdentityProviders": [
          "COGNITO",
        ],
        "UserPoolId": {
          "Ref": "NotesUserPoolC2397827",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "NotesUserPoolNotesUserPoolDomain7B9BE38F": {
      "Properties": {
        "Domain": "notes-demo-id3",
        "UserPoolId": {
          "Ref": "NotesUserPoolC2397827",
        },
      },
      "Type": "AWS::Cognito::UserPoolDomain",
    },
    "UpdateNoteFunctionF36A8BA2": {
      "DependsOn": [
        "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764",
        "UpdateNoteFunctionServiceRole2D7A5094",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "c73ed1de7ab7361a248de86787627d8dc0c1de7069cb910fb96580c161b9c97d.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_ORIGIN": "*",
            "REGION": "us-east-1",
            "TABLE_NAME": {
              "Ref": "NotesTableD0D0D2F1",
            },
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "UpdateNoteFunctionServiceRole2D7A5094",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "UpdateNoteFunctionServiceRole2D7A5094": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "NotesTableD0D0D2F1",
                    "Arn",
                  ],
                },
                {
                  "Ref": "AWS::NoValue",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764",
        "Roles": [
          {
            "Ref": "UpdateNoteFunctionServiceRole2D7A5094",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`AppStack - Prod matches snapshot 1`] = `
{
  "Outputs": {
    "ApiUrl": {
      "Description": "Base URL for the Notes API",
      "Export": {
        "Name": "NotesApiUrl",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "NotesApi2FFCBC92",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
            },
            "/",
          ],
        ],
      },
    },
    "CognitoDomain": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "NotesUserPoolNotesUserPoolDomain7B9BE38F",
            },
            ".auth.",
            {
              "Ref": "AWS::Region",
            },
            ".amazoncognito.com",
          ],
        ],
      },
    },
    "NotesApiEndpoint602C11C3": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "NotesApi2FFCBC92",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
            },
            "/",
          ],
        ],
      },
    },
    "TableName": {
      "Description": "Name of the DynamoDB table",
      "Export": {
        "Name": "NotesTableName",
      },
      "Value": {
        "Ref": "NotesTableD0D0D2F1",
      },
    },
    "UserPoolClientId": {
      "Value": {
        "Ref": "NotesUserPoolClient5D6339A3",
      },
    },
    "UserPoolId": {
      "Value": {
        "Ref": "NotesUserPoolC2397827",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CreateNoteFunctionC1EC69E3": {
      "DependsOn": [
        "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA",
        "CreateNoteFunctionServiceRole9C3BB915",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "07792e1a9f99895805c3695e1bcb779d3f86d9dd01f4028e1c0897277aba5550.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_ORIGIN": "*",
            "REGION": "us-east-1",
            "TABLE_NAME": {
              "Ref": "NotesTableD0D0D2F1",
            },
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "CreateNoteFunctionServiceRole9C3BB915",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "CreateNoteFunctionServiceRole9C3BB915": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "NotesTableD0D0D2F1",
                    "Arn",
                  ],
                },
                {
                  "Ref": "AWS::NoValue",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA",
        "Roles": [
          {
            "Ref": "CreateNoteFunctionServiceRole9C3BB915",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DeleteNoteFunctionCB51FD8A": {
      "DependsOn": [
        "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB",
        "DeleteNoteFunctionServiceRoleF6C5C9BE",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "effe4e6b7fe2c0efce36d54c1c03f2967c81786658839b0b56b4dcdf46f34013.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_ORIGIN": "*",
            "REGION": "us-east-1",
            "TABLE_NAME": {
              "Ref": "NotesTableD0D0D2F1",
            },
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "DeleteNoteFunctionServiceRoleF6C5C9BE",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "NotesTableD0D0D2F1",
                    "Arn",
                  ],
                },
                {
                  "Ref": "AWS::NoValue",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB",
        "Roles": [
          {
            "Ref": "DeleteNoteFunctionServiceRoleF6C5C9BE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "DeleteNoteFunctionServiceRoleF6C5C9BE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "GetAllNotesFunction67B1BBB1": {
      "DependsOn": [
        "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2",
        "GetAllNotesFunctionServiceRole77987CC1",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "b49afebf9b3b9c67b00b9777c474648e317831435ef030c6ae34cea9cde1528e.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_ORIGIN": "*",
            "REGION": "us-east-1",
            "TABLE_NAME": {
              "Ref": "NotesTableD0D0D2F1",
            },
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "GetAllNotesFunctionServiceRole77987CC1",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "GetAllNotesFunctionServiceRole77987CC1": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "NotesTableD0D0D2F1",
                    "Arn",
                  ],
                },
                {
                  "Ref": "AWS::NoValue",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2",
        "Roles": [
          {
            "Ref": "GetAllNotesFunctionServiceRole77987CC1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GetNoteByIdFunction0CA9D5E9": {
      "DependsOn": [
        "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48",
        "GetNoteByIdFunctionServiceRole94798426",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "63f5bf2fa8dd0ba048f487128630f68000d42cb06f8c48b97bd773b98cf1097b.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_ORIGIN": "*",
            "REGION": "us-east-1",
            "TABLE_NAME": {
              "Ref": "NotesTableD0D0D2F1",
            },
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "GetNoteByIdFunctionServiceRole94798426",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "GetNoteByIdFunctionServiceRole94798426": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "NotesTableD0D0D2F1",
                    "Arn",
                  ],
                },
                {
                  "Ref": "AWS::NoValue",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48",
        "Roles": [
          {
            "Ref": "GetNoteByIdFunctionServiceRole94798426",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "NotesApi2FFCBC92": {
      "Properties": {
        "Name": "Notes Service",
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "NotesApiAccount868808F8": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "NotesApi2FFCBC92",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "NotesApiCloudWatchRoleB85AD1BE",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "NotesApiCloudWatchRoleB85AD1BE": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "NotesApiDeploymentE5BDBE475a8597d952d7f9041a70deb596f4630b": {
      "DependsOn": [
        "NotesApinotesidDELETE24275C9B",
        "NotesApinotesidGET8453D020",
        "NotesApinotesidOPTIONS52F3D75D",
        "NotesApinotesidPUT13E9226C",
        "NotesApinotesidFFCD9C7D",
        "NotesApinotesGET86839B50",
        "NotesApinotesOPTIONS58AEEB93",
        "NotesApinotesPOST6F739821",
        "NotesApinotes5F6484F8",
      ],
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "Description": "Automatically created by the RestApi construct",
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "NotesApiDeploymentStageprod3F5FAD3A": {
      "DependsOn": [
        "NotesApiAccount868808F8",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "NotesApiDeploymentE5BDBE475a8597d952d7f9041a70deb596f4630b",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
        "StageName": "prod",
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "NotesApinotes5F6484F8": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "NotesApi2FFCBC92",
            "RootResourceId",
          ],
        },
        "PathPart": "notes",
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "NotesApinotesGET86839B50": {
      "DependsOn": [
        "GetAllNotesFunction67B1BBB1",
        "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2",
        "GetAllNotesFunctionServiceRole77987CC1",
      ],
      "Properties": {
        "AuthorizationType": "COGNITO_USER_POOLS",
        "AuthorizerId": {
          "Ref": "NotesAuthorizerE65DF30F",
        },
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "GetAllNotesFunction67B1BBB1",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "NotesApinotes5F6484F8",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesGETApiPermissionTestStackProdNotesApi6DB4DAADGETnotes290751C9": {
      "DependsOn": [
        "GetAllNotesFunction67B1BBB1",
        "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2",
        "GetAllNotesFunctionServiceRole77987CC1",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "GetAllNotesFunction67B1BBB1",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/",
              {
                "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
              },
              "/GET/notes",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesGETApiPermissionTestTestStackProdNotesApi6DB4DAADGETnotes7FC56F96": {
      "DependsOn": [
        "GetAllNotesFunction67B1BBB1",
        "GetAllNotesFunctionServiceRoleDefaultPolicyCAA24DB2",
        "GetAllNotesFunctionServiceRole77987CC1",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "GetAllNotesFunction67B1BBB1",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/test-invoke-stage/GET/notes",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesOPTIONS58AEEB93": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Credentials": "'true'",
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,Authorization'",
                "method.response.header.Access-Control-Allow-Methods": "'GET,POST,PUT,DELETE'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Credentials": true,
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Ref": "NotesApinotes5F6484F8",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesPOST6F739821": {
      "DependsOn": [
        "CreateNoteFunctionC1EC69E3",
        "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA",
        "CreateNoteFunctionServiceRole9C3BB915",
      ],
      "Properties": {
        "AuthorizationType": "COGNITO_USER_POOLS",
        "AuthorizerId": {
          "Ref": "NotesAuthorizerE65DF30F",
        },
        "HttpMethod": "POST",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "CreateNoteFunctionC1EC69E3",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "NotesApinotes5F6484F8",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesPOSTApiPermissionTestStackProdNotesApi6DB4DAADPOSTnotes6ECDD34C": {
      "DependsOn": [
        "CreateNoteFunctionC1EC69E3",
        "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA",
        "CreateNoteFunctionServiceRole9C3BB915",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CreateNoteFunctionC1EC69E3",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/",
              {
                "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
              },
              "/POST/notes",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesPOSTApiPermissionTestTestStackProdNotesApi6DB4DAADPOSTnotes2EF41A84": {
      "DependsOn": [
        "CreateNoteFunctionC1EC69E3",
        "CreateNoteFunctionServiceRoleDefaultPolicy5F7B63FA",
        "CreateNoteFunctionServiceRole9C3BB915",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "CreateNoteFunctionC1EC69E3",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/test-invoke-stage/POST/notes",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidDELETE24275C9B": {
      "DependsOn": [
        "DeleteNoteFunctionCB51FD8A",
        "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB",
        "DeleteNoteFunctionServiceRoleF6C5C9BE",
      ],
      "Properties": {
        "AuthorizationType": "COGNITO_USER_POOLS",
        "AuthorizerId": {
          "Ref": "NotesAuthorizerE65DF30F",
        },
        "HttpMethod": "DELETE",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "DeleteNoteFunctionCB51FD8A",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "NotesApinotesidFFCD9C7D",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesidDELETEApiPermissionTestStackProdNotesApi6DB4DAADDELETEnotesidBD250280": {
      "DependsOn": [
        "DeleteNoteFunctionCB51FD8A",
        "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB",
        "DeleteNoteFunctionServiceRoleF6C5C9BE",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeleteNoteFunctionCB51FD8A",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/",
              {
                "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
              },
              "/DELETE/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidDELETEApiPermissionTestTestStackProdNotesApi6DB4DAADDELETEnotesidBB75F952": {
      "DependsOn": [
        "DeleteNoteFunctionCB51FD8A",
        "DeleteNoteFunctionServiceRoleDefaultPolicy9835A5CB",
        "DeleteNoteFunctionServiceRoleF6C5C9BE",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "DeleteNoteFunctionCB51FD8A",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/test-invoke-stage/DELETE/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidFFCD9C7D": {
      "Properties": {
        "ParentId": {
          "Ref": "NotesApinotes5F6484F8",
        },
        "PathPart": "{id}",
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "NotesApinotesidGET8453D020": {
      "DependsOn": [
        "GetNoteByIdFunction0CA9D5E9",
        "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48",
        "GetNoteByIdFunctionServiceRole94798426",
      ],
      "Properties": {
        "AuthorizationType": "COGNITO_USER_POOLS",
        "AuthorizerId": {
          "Ref": "NotesAuthorizerE65DF30F",
        },
        "HttpMethod": "GET",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "GetNoteByIdFunction0CA9D5E9",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "NotesApinotesidFFCD9C7D",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesidGETApiPermissionTestStackProdNotesApi6DB4DAADGETnotesidC9251DFA": {
      "DependsOn": [
        "GetNoteByIdFunction0CA9D5E9",
        "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48",
        "GetNoteByIdFunctionServiceRole94798426",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "GetNoteByIdFunction0CA9D5E9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/",
              {
                "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
              },
              "/GET/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidGETApiPermissionTestTestStackProdNotesApi6DB4DAADGETnotesidED388BF9": {
      "DependsOn": [
        "GetNoteByIdFunction0CA9D5E9",
        "GetNoteByIdFunctionServiceRoleDefaultPolicy490AAA48",
        "GetNoteByIdFunctionServiceRole94798426",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "GetNoteByIdFunction0CA9D5E9",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/test-invoke-stage/GET/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidOPTIONS52F3D75D": {
      "Properties": {
        "ApiKeyRequired": false,
        "AuthorizationType": "NONE",
        "HttpMethod": "OPTIONS",
        "Integration": {
          "IntegrationResponses": [
            {
              "ResponseParameters": {
                "method.response.header.Access-Control-Allow-Credentials": "'true'",
                "method.response.header.Access-Control-Allow-Headers": "'Content-Type,Authorization'",
                "method.response.header.Access-Control-Allow-Methods": "'GET,PUT,DELETE'",
                "method.response.header.Access-Control-Allow-Origin": "'*'",
              },
              "StatusCode": "204",
            },
          ],
          "RequestTemplates": {
            "application/json": "{ statusCode: 200 }",
          },
          "Type": "MOCK",
        },
        "MethodResponses": [
          {
            "ResponseParameters": {
              "method.response.header.Access-Control-Allow-Credentials": true,
              "method.response.header.Access-Control-Allow-Headers": true,
              "method.response.header.Access-Control-Allow-Methods": true,
              "method.response.header.Access-Control-Allow-Origin": true,
            },
            "StatusCode": "204",
          },
        ],
        "ResourceId": {
          "Ref": "NotesApinotesidFFCD9C7D",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesidPUT13E9226C": {
      "DependsOn": [
        "UpdateNoteFunctionF36A8BA2",
        "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764",
        "UpdateNoteFunctionServiceRole2D7A5094",
      ],
      "Properties": {
        "AuthorizationType": "COGNITO_USER_POOLS",
        "AuthorizerId": {
          "Ref": "NotesAuthorizerE65DF30F",
        },
        "HttpMethod": "PUT",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "UpdateNoteFunctionF36A8BA2",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "NotesApinotesidFFCD9C7D",
        },
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "NotesApinotesidPUTApiPermissionTestStackProdNotesApi6DB4DAADPUTnotesid54744190": {
      "DependsOn": [
        "UpdateNoteFunctionF36A8BA2",
        "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764",
        "UpdateNoteFunctionServiceRole2D7A5094",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "UpdateNoteFunctionF36A8BA2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/",
              {
                "Ref": "NotesApiDeploymentStageprod3F5FAD3A",
              },
              "/PUT/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesApinotesidPUTApiPermissionTestTestStackProdNotesApi6DB4DAADPUTnotesid479B8947": {
      "DependsOn": [
        "UpdateNoteFunctionF36A8BA2",
        "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764",
        "UpdateNoteFunctionServiceRole2D7A5094",
      ],
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "UpdateNoteFunctionF36A8BA2",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "NotesApi2FFCBC92",
              },
              "/test-invoke-stage/PUT/notes/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "NotesAuthorizerE65DF30F": {
      "Properties": {
        "IdentitySource": "method.request.header.Authorization",
        "Name": "TestStackProdNotesAuthorizer2434F10F",
        "ProviderARNs": [
          {
            "Fn::GetAtt": [
              "NotesUserPoolC2397827",
              "Arn",
            ],
          },
        ],
        "RestApiId": {
          "Ref": "NotesApi2FFCBC92",
        },
        "Type": "COGNITO_USER_POOLS",
      },
      "Type": "AWS::ApiGateway::Authorizer",
    },
    "NotesTableD0D0D2F1": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "id",
            "AttributeType": "S",
          },
        ],
        "KeySchema": [
          {
            "AttributeName": "id",
            "KeyType": "HASH",
          },
        ],
        "ProvisionedThroughput": {
          "ReadCapacityUnits": 5,
          "WriteCapacityUnits": 5,
        },
        "TableName": "NotesTable",
      },
      "Type": "AWS::DynamoDB::Table",
      "UpdateReplacePolicy": "Retain",
    },
    "NotesUserPoolC2397827": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AccountRecoverySetting": {
          "RecoveryMechanisms": [
            {
              "Name": "verified_phone_number",
              "Priority": 1,
            },
            {
              "Name": "verified_email",
              "Priority": 2,
            },
          ],
        },
        "AdminCreateUserConfig": {
          "AllowAdminCreateUserOnly": false,
        },
        "AutoVerifiedAttributes": [
          "email",
        ],
        "EmailVerificationMessage": "The verification code to your new account is {####}",
        "EmailVerificationSubject": "Verify your new account",
        "SmsVerificationMessage": "The verification code to your new account is {####}",
        "UsernameAttributes": [
          "email",
        ],
        "VerificationMessageTemplate": {
          "DefaultEmailOption": "CONFIRM_WITH_CODE",
          "EmailMessage": "The verification code to your new account is {####}",
          "EmailSubject": "Verify your new account",
          "SmsMessage": "The verification code to your new account is {####}",
        },
      },
      "Type": "AWS::Cognito::UserPool",
      "UpdateReplacePolicy": "Delete",
    },
    "NotesUserPoolClient5D6339A3": {
      "Properties": {
        "AllowedOAuthFlows": [
          "implicit",
          "code",
        ],
        "AllowedOAuthFlowsUserPoolClient": true,
        "AllowedOAuthScopes": [
          "profile",
          "phone",
          "email",
          "openid",
          "aws.cognito.signin.user.admin",
        ],
        "CallbackURLs": [
          "https://example.com",
        ],
        "ExplicitAuthFlows": [
          "ALLOW_USER_PASSWORD_AUTH",
          "ALLOW_REFRESH_TOKEN_AUTH",
        ],
        "GenerateSecret": false,
        "PreventUserExistenceErrors": "ENABLED",
        "SupportedIdentityProviders": [
          "COGNITO",
        ],
        "UserPoolId": {
          "Ref": "NotesUserPoolC2397827",
        },
      },
      "Type": "AWS::Cognito::UserPoolClient",
    },
    "NotesUserPoolNotesUserPoolDomain7B9BE38F": {
      "Properties": {
        "Domain": "notes-demo-id3",
        "UserPoolId": {
          "Ref": "NotesUserPoolC2397827",
        },
      },
      "Type": "AWS::Cognito::UserPoolDomain",
    },
    "UpdateNoteFunctionF36A8BA2": {
      "DependsOn": [
        "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764",
        "UpdateNoteFunctionServiceRole2D7A5094",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "c73ed1de7ab7361a248de86787627d8dc0c1de7069cb910fb96580c161b9c97d.zip",
        },
        "Environment": {
          "Variables": {
            "ALLOWED_ORIGIN": "*",
            "REGION": "us-east-1",
            "TABLE_NAME": {
              "Ref": "NotesTableD0D0D2F1",
            },
          },
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "UpdateNoteFunctionServiceRole2D7A5094",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "UpdateNoteFunctionServiceRole2D7A5094": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "dynamodb:BatchGetItem",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
                "dynamodb:Query",
                "dynamodb:GetItem",
                "dynamodb:Scan",
                "dynamodb:ConditionCheckItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:DeleteItem",
                "dynamodb:DescribeTable",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "NotesTableD0D0D2F1",
                    "Arn",
                  ],
                },
                {
                  "Ref": "AWS::NoValue",
                },
              ],
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "UpdateNoteFunctionServiceRoleDefaultPolicy21C54764",
        "Roles": [
          {
            "Ref": "UpdateNoteFunctionServiceRole2D7A5094",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
